// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatableProgressiveImage Animatable Progressive Image should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": 375,
        "width": 375,
      },
      undefined,
    ]
  }
>
  <Image
    blurRadius={3}
    collapsable={false}
    forwardedRef={[Function]}
    nativeID="animatedComponent"
    source={
      Object {
        "uri": "https://i.imgur.com/T8bP9tw.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Image
    collapsable={false}
    forwardedRef={[Function]}
    nativeID="animatedComponent"
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/v74Ah44.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`AnimatedProgressiveImage Animated API should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": 375,
        "width": 375,
      },
      undefined,
    ]
  }
>
  <Image
    blurRadius={3}
    collapsable={false}
    nativeID="animatedComponent"
    source={
      Object {
        "uri": "https://i.imgur.com/T8bP9tw.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Image
    collapsable={false}
    nativeID="animatedComponent"
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/v74Ah44.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`ProgressiveImage should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": 375,
        "width": 375,
      },
      undefined,
    ]
  }
>
  <Image
    blurRadius={3}
    collapsable={false}
    nativeID="animatedComponent"
    source={
      Object {
        "uri": "https://i.imgur.com/T8bP9tw.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Image
    collapsable={false}
    nativeID="animatedComponent"
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/v74Ah44.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;

exports[`ReanimatedProgressiveImage Reaimated API should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": 375,
        "width": 375,
      },
      undefined,
    ]
  }
>
  <Image
    animatedStyle={
      Object {
        "value": Object {
          "opacity": 1,
        },
      }
    }
    blurRadius={3}
    collapsable={false}
    source={
      Object {
        "uri": "https://i.imgur.com/T8bP9tw.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Image
    animatedStyle={
      Object {
        "value": Object {
          "opacity": 0,
        },
      }
    }
    collapsable={false}
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/v74Ah44.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
